requestDelete, getTotalBalance
